# algo-complexity-analyzer

./: CHANGELOG.md  README.md  package.json  tsconfig.json
assets/pkg/: big_o_analyser.d.ts  big_o_analyser.js  big_o_analyser_bg.wasm  big_o_analyser_bg.wasm.d.ts  package.json
src/: complexityAnalyzer.ts  decorationProvider.ts  exportManager.ts  extension.ts  reportProvider.ts
src/test/: test-wasm.js
wasm/: Cargo.toml
wasm/src/: lib.rs
