[package]
name = "big-o-analyser"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.99"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

console_error_panic_hook = { version = "0.1.7", optional = true }
# wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
console = []

# [package.metadata.wasm-pack.profile.release]
# wee_alloc = false

# [package.metadata.wasm-pack.profile.dev]
# wee_alloc = false
